<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@drawable/get_started_background"
        tools:context=".presentation.get_started.GetStartedFragment">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_get_started"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="@dimen/medium_margin_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_get_started_subtitle"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/medium_margin_default"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/get_started"
            app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_continue_get_started"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/btn_continue_get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="@dimen/medium_margin_default"
            android:textColor="@color/white"
            android:text="@string/get_started"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"/>

        <TextView
            android:id="@+id/txt_subtitle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_get_started_subtitle_2"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/small_margin_default"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/btn_continue_get_started" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
