<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paywall_background">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|top"
            android:layout_margin="@dimen/medium_margin_default"
            android:background="@drawable/baseline_close_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/medium_margin_default"
            android:gravity="bottom"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_plant_app"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_access_features"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/small_margin_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/medium_margin_default">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/item_paywall_feature"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_date_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_paywall_premium_option"
                    android:layout_marginTop="@dimen/medium_margin_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_try_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_try_free"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/medium_margin_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/medium_margin_default"
                android:text="@string/title_paywall_bottom"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium_margin_default"
                android:text="Terms - Privacy - Restore"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </FrameLayout>

</layout>
